Generate the website into ./docs instead of ./public

--- a/config.yaml
+++ b/config.yaml
@@ -2,6 +2,7 @@ baseURL: https://www.hugobricks.preview.usecue.com
 theme: hugobricks
 defaultContentLanguage: en
 assetDir: static
+publishDir: ./docs
 
 markup:
   goldmark:
