--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -1,5 +1,5 @@
 title: FieldFoundry
 description: HPLC services.
 contact:
-  # phone: +31 618 51 89 28
+  phone: +31 618 51 89 28
   email: hello@fieldfoundry.com
