--- a/data/settings.yaml
+++ b/data/settings.yaml
@@ -4,7 +4,7 @@ sticky_header: true
 dark_header: false
 dark_footer: true
 customcursor: false
-intersectionobserver: true
+intersectionobserver: false
 filter_has_numbers: true
 page_size: 3
 show_all_services: true
