--- a/.github/workflows/build-deploy-gh-pages.yml
+++ b/.github/workflows/build-deploy-gh-pages.yml
@@ -29,6 +29,11 @@ jobs:
           docker create --name temp-container landing nocommand
           docker cp temp-container:/public public/
           docker rm temp-container
+      - name: Upload public directory as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: public-files
+          path: public/
 
   deploy:
     needs: build
@@ -37,6 +42,10 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Download public directory artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: public-files
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
