--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -32,6 +32,6 @@ menuitems:
   #   link: /contact/
 cta:
   active: true
-  title: Get started
+  title: Get in touch
   link: /contact/
 preheader: open Mon-Fri from 9-5
