--- a/.github/workflows/build-deploy-gh-pages.yml
+++ b/.github/workflows/build-deploy-gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Extract files from Docker image
         run: |
           docker create --name temp-container landing nocommand
-          docker cp temp-container:/docs export/
+          docker cp temp-container:/public export/
           docker rm temp-container
       - name: Upload public directory as artifact
         uses: actions/upload-artifact@v4
@@ -51,8 +51,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload docs/ inside the artifact export-files
-          path: 'docs/'
+          # Upload ./public from ./export/public
+          path: 'public/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
