--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -1,5 +1,5 @@
-title: FieldFoundry
+title: Field Foundry
 description: HPLC services.
 contact:
-  phone: +31 618 51 89 28
+  phone: +44 (0) 2035760561
   email: hello@fieldfoundry.com
