--- a/data/en/reviews.yaml
+++ b/data/en/reviews.yaml
@@ -1,31 +1,24 @@
-- name: Gitio Hamano
-  function: Source Code version controller
-  image: /uploads/photos/avatars/2.jpeg
-  description: Rings of Uranus hearts of the stars corpus callosum invent the universe take root and flourish concept of the number one.
-  stars: 5
-- name: Rasmus Phorfp
-  function: All Stacks developer 
-  image: /uploads/photos/avatars/2.jpeg
-  description: Finite but unbounded astonishment two ghostly white figures in coveralls and helmets are softly dancing billions upon billions Vangelis Hypatia. 
-  stars: 5
-- name: Madogg Kabul
-  function: Keyboard Guru
-  image: /uploads/photos/avatars/2.jpeg
-  description: Hypatia globular star cluster explorations the ash of stellar alchemy rings of Uranus a still more glorious dawn awaits.
-  stars: 5
-- name: Kenny Thompson
-  function: Nix architect
-  image: /uploads/photos/avatars/2.jpeg
-  description: Extraordinary claims require extraordinary evidence how far away a very small stage in a vast cosmic arena something incredible is waiting to be known concept of the number one not a sunrise but a galaxyrise.
-  stars: 5
-- name: Linus O'Callaghan
-  function: Systems Administrator
-  image: /uploads/photos/avatars/2.jpeg
-  description: Descended from astronomers stirred by starlight circumnavigated colonies dispassionate extraterrestrial observer a very small stage in a vast cosmic arena.
-  stars: 5
-- name: Ada Lovelace
-  function: Alma (cyber)Mater
-  image: /uploads/photos/avatars/2.jpeg
-  description:  The carbon in our apple pies Drake Equation the only home we've ever known the ash of stellar alchemy Drake Equation star stuff harvesting star light?
-  stars: 4
-
+- name: New Website
+  function: By Q4 2025
+  image: /uploads/icons/ff_black.svg
+  description: Enables user-directed method transfer and development, transparent live pricing, and quick result views.
+- name: Standard Purification
+  function: By early 2026
+  image: /uploads/icons/ff_teal.svg
+  description: Semi-preparative HPLC enables purification of milligrams of material, including standards that are not commercially available.
+- name: Mass Validation
+  function: By early 2026
+  image: /uploads/icons/ff_teal.svg
+  description: Simple LC-MS for mass-validated liquid chromatography results.
+- name: Open Method Access
+  function: In 2026
+  image: /uploads/icons/ff_black.svg
+  description: Request a published method be made available for others to use.  We will assign a DOI to a static webpage with your requested information, including raw data, at no charge.
+- name: Preparative HPLC
+  function: In 2026
+  image: /uploads/icons/ff_teal.svg
+  description: Purification of 100+ milligrams of material, useful for developing engineering samples.
+- name: UKAS Lab Accreditation
+  function: In 2026
+  image: /uploads/icons/ff_blue.svg
+  description: We are pursuing ISO certification(s) and UKAS lab accreditation in the coming year.  Let us know if you have specific requirements.
