--- a/data/en/general.yaml
+++ b/data/en/general.yaml
@@ -1,5 +1,5 @@
 title: Field Foundry
 description: HPLC made easy.
 contact:
-  phone: +442035760561
+  phone: "+442035760561"
   email: hello@fieldfoundry.com
