Fix various small content issues

--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -17,7 +17,7 @@ menuitems:
   - title: Research
     link: /research/
   - title: FAQs
-    link: /FAQ/
+    link: /faq/
   - title: Blog
     link: /blog/
 cta:
