--- a/data/en/header.yaml
+++ b/data/en/header.yaml
@@ -1,5 +1,5 @@
 logo_image: /uploads/FieldFoundryLogoWhite.svg
-logo_subtitle: Text Here
+logo_subtitle: HPLC Made Easy
 dark_header: true
 mobile_view_width: 960
 menuitems:
