--- a/data/en/faqs.yaml
+++ b/data/en/faqs.yaml
@@ -1,37 +1,37 @@
 - title: Sample Submission
   faqs:
-    - question: "What's the first step to ordering?"
-      answer: "The first step is a simple conversation. Contact us to discuss your research goals, and we'll help you plan your analysis and provide a transparent quote."
+    - question: "What is the first step to ordering?"
+      answer: "The first step is a simple conversation. Contact us to discuss your research goals, and we will help you plan your analysis and provide a transparent quote."
     - question: "How do I send you samples?"
       answer:  "The simple approach is to request [Full Circle Labs](https://fullcirclelabs.bio) sample pickup services.  You order will be processed through Full Circle Labs; a current list of their sample drop-off locations can be found in the [Locate Your Closest Dropbox](https://fullcirclelabs.bio) section of their website.  FCL can also generate shipping labels for you and use Imperial interdepartmental mail."
     - question: "What about sample preparation?"
-      answer: "We believe you should have full control over your samples. We'll advise you on best practices for steps like filtering, solid phase extraction, and spiking internal standards in. On our end, we perform a complimentary QC screen on all samples for particulates and precipitates using our nephelometer before HPLC measurements are made.  We can perform additional sample preparation steps upon request as an add-on service, including developing new extractions with HPLC and nephelometry measurements in the loop."
+      answer: "We believe you should have full control over your samples. We'll advise you on best practices for steps such as filtering, solid phase extraction, and spiking in internal standards. On our end, we perform a complimentary QC screen on all samples for particulates and precipitates using our nephelometer before HPLC measurements are made.  We can perform additional sample preparation steps upon request as an add-on service, including developing new extractions with HPLC and nephelometry measurements in the loop."
     - question: "What are my ordering and submission options?"
       answer: "You have two convenient options. You can order directly from us, or you can order through our partner, Full Circle Labs, to use their sample drop-off network and billing system."
     - question: "What kind of vials or plates can I use?"
       answer: "We are equipped to handle standard tubes, vials, and SBS-format multi-well plates. If your project uses a custom format, let us know and we will work to accommodate it."
     - question: "What kinds of samples can you accept?"
-      answer: "During our Early Access Programme, we require a consultation before accepting potentially hazardous materials including clinical samples, sensitizers, cytotoxic agents, and radiolabeled materials. Some of these may not be suitable for our services during early access."
+      answer: "During our Early Access Programme, we require a consultation before accepting potentially hazardous materials including clinical samples, sensitisers, cytotoxic agents, and radiolabelled materials. Some of these may not be suitable for our services during early access."
 
 - title: Methods
   faqs:
     - question: "Can you help me develop a new method?"
-      answer: "Yes. We offer some standardized measurements, including a 'Quicklook' service, as a first step. This run on a representative sample provides the data needed to plan larger batches and refine your method. During early access, this process is arranged via consultation during early access."
+      answer: "Yes. We offer some standardised measurements, including a 'quick look' service, as a first step. This run on a representative sample provides the data needed to plan larger batches and refine your method. During early access, any method development needed starts with our first conversation."
     - question: "What if I want to test multiple conditions?"
       answer: "We can store your sample for a month, and longer by request.  Every stored sample can be used to run successive measurements for DIY method development, repeating standard curves, or anything else you need. A web interface to streamline this process is coming later this year."
-    - question: "What columns do you have available?"
-      answer: "You have access to our standard C-18, HILIC, biphenyl, and ion-exchange columns. We can also source and install a custom column specifically for your project by arrangement."
-    - question: "What mobile phases are available?"
-      answer: "We stock standard reverse phase solvents like water, methanol, and acetonitrile with common additives. If your method requires a custom mobile phase, we can discuss this during your consultation."
-    - question: "What detectors do you use?"
-      answer: "Our systems have both a Photodiode Array (PDA) detector for UV-active compounds and a universal Refractive Index (RID) detector for analytes with little or no UV absorbance, like simple sugars."
-    - question: "What equipment is in your lab?"
-      answer: "Our primary instruments for early access are Shimadzu LC-2060C 3D and LC-2040C UPLC systems with RID-20A detectors and one FRC-40 fraction collector, plus a BMG LabTech NEPHELOstar Plus for solubility screening. We are always expanding our offerings; please see our [services roadmap](/roadmap/) for updates."
+    - question: "Which columns are available?"
+      answer: "You have access to our standard C-18, HILIC, and ion-exchange columns. Our library of standard columns will expand over the next months.  We can also source and install a custom column specifically for your project by prior arrangement."
+    - question: "Which mobile phases are available?"
+      answer: "We stock standard reverse phase solvents such as water, methanol, and acetonitrile with common additives. If your method requires a custom mobile phase, we can discuss this during your consultation."
+    - question: "Which detectors are available?"
+      answer: "Our systems have both a Photodiode Array (PDA) detector for UV-active compounds and a universal Refractive Index (RID) detector for analytes with little or no UV absorbance, such as simple sugars."
+    - question: "Which equipment is available?"
+      answer: "Our primary instruments for early access are Shimadzu LC-2060C 3D and LC-2040C UPLC systems with RID-20A detectors and one FRC-40 fraction collector.  We maintain two Agilent 1100 HPLC systems with DAD detectors for certain specialised requests.  We maintain one BMG LabTech NEPHELOstar Plus for solubility screening. We are always expanding our offerings; please see our [services roadmap](/roadmap/) for updates."
 
 - title: Results
   faqs:
     - question: "What format will my results be in?"
-      answer: "You will receive your results in PDF, .TSV, and .CDF ANDI formats. A standard report includes chromatograms, method details, and peak tables. You can open .CDF files with free software like [OpenChrom](https://www.openchrom.net/)."
+      answer: "You will receive your results in PDF, .TSV, and .CDF ANDI formats. A standard report includes chromatograms, method details, and peak tables. You can open .CDF files with the open source tool [OpenChrom](https://github.com/OpenChrom/openchrom?tab=readme-ov-file)."
     - question: "Can you calculate concentrations for me?"
       answer: "Yes. Custom analysis, such as building standard curves and calculating final concentrations, is available as an add-on service."
     - question: "Are these results suitable for regulated use?"
