--- a/data/en/faqs.yaml
+++ b/data/en/faqs.yaml
@@ -4,7 +4,7 @@
       answer: "The first step is a simple conversation. Contact us to discuss your research goals, and we will help you plan your analysis and provide a transparent quote."
     - question: "How do I send you samples?"
       answer:  "The simple approach is to request [Full Circle Labs](https://fullcirclelabs.bio) sample pickup services.  You order will be processed through Full Circle Labs; a current list of their sample drop-off locations can be found in the [Locate Your Closest Dropbox](https://fullcirclelabs.bio) section of their website.  FCL can also generate shipping labels for you and use Imperial interdepartmental mail."
-    - question: "What about sample preparation?"
+    - question: "How does sample preparation work?"
       answer: "We believe you should have full control over your samples. We'll advise you on best practices for steps such as filtering, solid phase extraction, and spiking in internal standards. On our end, we perform a complimentary QC screen on all samples for particulates and precipitates using our nephelometer before HPLC measurements are made.  We can perform additional sample preparation steps upon request as an add-on service, including developing new extractions with HPLC and nephelometry measurements in the loop."
     - question: "What are my ordering and submission options?"
       answer: "You have two convenient options. You can order directly from us, or you can order through our partner, Full Circle Labs, to use their sample drop-off network and billing system."
@@ -35,4 +35,4 @@
     - question: "Can you calculate concentrations for me?"
       answer: "Yes. Custom analysis, such as building standard curves and calculating final concentrations, is available as an add-on service."
     - question: "Are these results suitable for regulated use?"
-      answer: "All our current services are for research purposes only. We do not provide results for regulated testing, such as GMP, at this time, but plan to in the future."
+      answer: "All our current services are for research purposes only. We do not provide results for regulated testing, such as GLP/GMP, at this time.  We may offer additional services in the future."
