--- a/data/en/reviews.yaml
+++ b/data/en/reviews.yaml
@@ -1,5 +1,5 @@
-- name: New Website
-  function: By Q4 2025
+- name: New Web Tools
+  function: By early 2026
   image: /uploads/icons/ff_blue.svg
   description: Enables user-directed method transfer and development, transparent live pricing, and quick result views.
 - name: Standard Purification
